# lib_map

./: CMakeLists.txt  README.md  main.c  makefile
doc/: task.md
map_lib/: CMakeLists.txt  hash.c  hash.h  map.c  map.h  map_double.c  map_double.h  map_mock.c  map_mock.h  map_simple.c  map_simple.h  map_std.cpp  map_std.h
map_lib/misc/: allocator.c  allocator.h  hashes.c  hashes.h  misc.c  misc.h  sync.c  sync.h
misc/: sync.h
test/: 00_simple_map.c  01_double_map.c  CMakeLists.txt  common.c  common.h
test/behavior/: 00_simple_map.c  01_double_map.c  02_std_map.c  CMakeLists.txt  common.c  common.h
test/measuring/: CMakeLists.txt  common.c  double_measuring.c  hash_measuring.c  std_measuring.c
test/messuring/: CMakeLists.txt  common.h  hash_messuring.c  simple_messuring.c
